--- a/webpage/styles.css
+++ b/webpage/styles.css
@@ -45,14 +45,16 @@ form {
 	border: none;
 }
 
-.input-container > input:hover,
-.input-container > select:hover {
+:where(.input-container > :is(input, select), button):where(
+		:focus-visible,
+		:hover
+	) {
 	box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.097);
+	outline: 1px solid rgb(210, 210, 210);
 }
 
 .btn-container {
 	display: flex;
-	justify-content: center;
 	gap: 1em;
 }
 
@@ -65,16 +67,12 @@ form {
 	cursor: pointer;
 }
 
-.btn:hover {
-	opacity: 0.7;
-}
-
 .btn-add {
 	background-color: rgba(0, 0, 0, 0.15);
 	color: #5d5d5d;
 }
 
 .btn-submit {
-	background-color: green;
+	background-color: rgb(19, 173, 19);
 	color: white;
 }
