--- a/webpage/styles.css
+++ b/webpage/styles.css
@@ -45,14 +45,17 @@ main {
 }
 
 form {
-	width: min(70%, 40rem);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	min-width: 100%;
 }
 
 .input-container {
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 1em;
-	width: min(70%, 40rem);
+	width: min(100%, 30rem);
 }
 
 .input-container > input,
